cleaning up unused variables and import statements